--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -3,6 +3,12 @@
   background-color: rgb(110, 199, 240);
 }
 
+.img-fluid {
+  border-width: 4px;
+  border-style: solid;
+  border-color: black;
+  border-radius: 12px;
+}
 
 h1, h2{
   background-color: white;
