styling changes to fit screen without scrolling

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,11 +1,9 @@
 <div class="container">
   <br>
-  <br>
   <div class="text-center">
     <h1>Eat-Da-Burger!!!!</h1>
 
   </div>
-  <br>
   <br>
 
   <div class="row">
@@ -24,7 +22,7 @@
       </ul>
 
     </div>
-    <div class="col-sm-4">
+    <div class="text-center col-sm-4">
       <img class="img-fluid" src="/assets/burger.jpg.jpg" alt="burger">
     </div>
     <div class="col-sm-4 burgers">
@@ -43,7 +41,6 @@
 
     </div>
   </div>
-  <br>
   <br>
   <div class="row">
     <div class="col-sm-12 text-center">
