--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1,6 +1,13 @@
+body{
+color: black;
+}
 
 .container{
   background-color: rgb(110, 199, 240);
+  border-width: 4px;
+  border-style: solid;
+  border-color: black;
+  border-radius: 12px;
 }
 
 .img-fluid {
@@ -8,6 +15,7 @@
   border-style: solid;
   border-color: black;
   border-radius: 12px;
+  max-height: 370px;
 }
 
 h1, h2{
